<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Main: añadir nuevo monstruo -->
    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />

    <!-- Detail: editar monstruo -->
    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always" />

    <!-- Detail: eliminar monstruo -->
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

    <!-- Main: filtro derrotados -->
    <item
        android:id="@+id/action_filter_defeated"
        android:title="@string/menu_filter_defeated"
        app:showAsAction="never" />

    <!-- Todas: acerca de -->
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
